# docs/swagger.json
@@ -16,7 +16,7 @@
         "tags": [
           "Greetings"
         ],
-        "description": "Get birthday greetings for users whose birthdays are on the current day. Returns an array of birthday greetings, or an empty array if no users have a birthday. Different gender will get different discount items.",
+        "description": "Get birthday greetings for users whose birthdays are on the current day. Returns an array of birthday greetings, or an empty array if no users have a birthday. Elder(>49) will get an additional greting picture!",
         "responses": {
           "200": {
             "description": "Success",
@@ -70,6 +70,19 @@
                                     "example": {
                                       "type": "string",
                                       "example": "Happy birthday, dear [Name]! We offer special discount for the following items: [Items]"
+                                    }
+                                  }
+                                },
+                                "image": {
+                                  "type": "object",
+                                  "properties": {
+                                    "type": {
+                                      "type": "string",
+                                      "example": "string"
+                                    },
+                                    "example": {
+                                      "type": "string",
+                                      "example": "data:image/png;base64,[base64Image]"
                                     }
                                   }
                                 }
